// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseStudies should render correctly 1`] = `
<div>
  <section
    class="case-studies"
    id="case-studies"
  >
    <div
      class="container"
    >
      <div>
        <h2
          class="case-studies__main-title case-studies__main-title-index"
        >
          
        Case 
          <!---->
          
        Studies
      
        </h2>
         
        <!---->
      </div>
    </div>
     
    <div
      class="container"
    >
      <section
        class="cases-list"
      >
        <div
          class="cases-list_item cases-list_item--full cases-list_veeqo"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/veeqo/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Veeqo logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Logistics
              </span>
               
              <h3>
                
        Optimization for Veeqo
      
              </h3>
               
              <p>
                Our DevOps team optimized the infrastructure for Veeqo, an inventory and shipping e-commerce platform, and made it highly efficient, smooth, and cost-effective for our partners.
              </p>
               
              <nuxtlink
                to="/case-studies/veeqo/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--big cases-list_itc"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/R4TCA-web-application/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="ITC logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Digital transformation
              </span>
               
              <h3>
                
        Ready4Trade Central Asia
      
              </h3>
               
              <p>
                A web app customized for the delivery of export management coaching missions that contributes to the development of intra-regional and international trade in Central Asia
              </p>
               
              <nuxtlink
                to="/case-studies/R4TCA-web-application/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--small cases-list_yourcast"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/yourcast/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Yourcast logo"
                height="25"
                src="img.jpg"
                width="120"
              />
               
              <span>
                Content Streaming
              </span>
               
              <h3>
                
        The Evolution of Yourcast.TV
      
              </h3>
               
              <p>
                Mad Devs developed a secure and private video streaming service and live video broadcasting cinema to provide entertainment experience to isolated groups feeling homesick.
              </p>
               
              <nuxtlink
                to="/case-studies/yourcast/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--full cases-list_godee"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/godee/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Godee logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Transportation
              </span>
               
              <h3>
                
        Convenient shuttle bus service
      
              </h3>
               
              <p>
                Mad Devs helped GoDee with developing feature-rich software to re-invent public mobility by building new smart ways of a daily commute.
              </p>
               
              <nuxtlink
                to="/case-studies/godee/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
      </section>
       
      <nuxtlink
        class="cases-list_see-more"
        to="/case-studies/"
      >
        <span>
          See More
        </span>
      </nuxtlink>
    </div>
  </section>
</div>
`;

exports[`CaseStudies should render correctly with type=projects 1`] = `
<div>
  <section
    class="case-studies case-studies--projects"
    id="case-studies"
  >
    <div
      class="container"
    >
      <div>
        <h2
          class="case-studies__main-title case-studies__main-title-projects"
        >
          
        Case 
          <br />
          
        Studies
      
        </h2>
         
        <div
          class="case-studies__fire-icon"
        />
      </div>
    </div>
     
    <div
      class="container"
    >
      <section
        class="cases-list"
      >
        <div
          class="cases-list_item cases-list_item--full cases-list_veeqo"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/veeqo/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Veeqo logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Logistics
              </span>
               
              <h3>
                
        Optimization for Veeqo
      
              </h3>
               
              <p>
                Our DevOps team optimized the infrastructure for Veeqo, an inventory and shipping e-commerce platform, and made it highly efficient, smooth, and cost-effective for our partners.
              </p>
               
              <nuxtlink
                to="/case-studies/veeqo/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--big cases-list_itc"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/R4TCA-web-application/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="ITC logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Digital transformation
              </span>
               
              <h3>
                
        Ready4Trade Central Asia
      
              </h3>
               
              <p>
                A web app customized for the delivery of export management coaching missions that contributes to the development of intra-regional and international trade in Central Asia
              </p>
               
              <nuxtlink
                to="/case-studies/R4TCA-web-application/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--small cases-list_yourcast"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/yourcast/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Yourcast logo"
                height="25"
                src="img.jpg"
                width="120"
              />
               
              <span>
                Content Streaming
              </span>
               
              <h3>
                
        The Evolution of Yourcast.TV
      
              </h3>
               
              <p>
                Mad Devs developed a secure and private video streaming service and live video broadcasting cinema to provide entertainment experience to isolated groups feeling homesick.
              </p>
               
              <nuxtlink
                to="/case-studies/yourcast/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
        <div
          class="cases-list_item cases-list_item--full cases-list_godee"
          data-testid="test-case-card"
        >
          <nuxtlink
            class="cases-list_item-link"
            disabled="disabled"
            tag="a"
            to="/case-studies/godee/"
          >
            <video
              class="cases-list_item-video media_lazy"
              loop="loop"
              muted="muted"
              poster="img.jpg"
            >
              <source
                data-src="img.jpg"
                type="video/mp4"
              />
              
      Your browser does not support the video tag.
    
            </video>
             
            <div
              class="cases-list_item-info"
            >
              <img
                alt="Godee logo"
                height="23"
                src="img.jpg"
                width="105"
              />
               
              <span>
                Transportation
              </span>
               
              <h3>
                
        Convenient shuttle bus service
      
              </h3>
               
              <p>
                Mad Devs helped GoDee with developing feature-rich software to re-invent public mobility by building new smart ways of a daily commute.
              </p>
               
              <nuxtlink
                to="/case-studies/godee/"
              >
                
        Explore
      
              </nuxtlink>
            </div>
          </nuxtlink>
        </div>
      </section>
       
      <nuxtlink
        class="cases-list_see-more"
        to="/case-studies/"
      >
        <span>
          See More
        </span>
      </nuxtlink>
    </div>
  </section>
</div>
`;
